Started working on values

--- a/tests/test_jigsaw.ipynb
+++ b/tests/test_jigsaw.ipynb
@@ -249,6 +249,8 @@
     "\n",
     "    def __init__(self, size=9, auto_generate=True, timeout=10):\n",
     "        self.size = size\n",
+    "        self.rows = list(range(1, self.size + 1))\n",
+    "        self.columns = list(range(1, self.size + 1))\n",
     "        self.left_grid_ext = [(x, y) for x, y in zip([0]*(size + 1), range(0, size + 1))]\n",
     "        self.right_grid_ext = [(x, y) for x, y in zip([size]*(size + 1), range(0, size + 1))]\n",
     "        self.top_grid_ext = [(x, y) for x, y in zip(range(0, size + 1), [0]*(size + 1))]\n",
@@ -509,11 +511,15 @@
     "        if len(shapely_box.exterior.coords) != 5:\n",
     "            raise TypeError(\"Cell must be a shapely box (Polygon) of 1x1 dimensions\")\n",
     "        self.cell = shapely_box\n",
+    "        self.value = None\n",
     "        self.coords = list(shapely_box.exterior.coords)[:-1]\n",
     "        self.area = shapely_box.area\n",
     "        self.origin = self.coords[3]\n",
     "        self.x_start = self.origin[0]\n",
     "        self.y_start = self.origin[1]\n",
+    "        self.row = self.x_start + 1\n",
+    "        self.column = self.y_start + 1\n",
+    "        self.index = (self.row, self.column) #(x,y)\n",
     "        self._geom = shapely_box._geom\n",
     "        self.boundary = shapely_box.boundary\n",
     "        self.center_coords = (self.x_start + .5, self.y_start + .5)\n",
