--- a/tests/test_values.ipynb
+++ b/tests/test_values.ipynb
@@ -2,64 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 0),\n",
-       " (0, 1),\n",
-       " (0, 2),\n",
-       " (0, 3),\n",
-       " (0, 4),\n",
-       " (0, 5),\n",
-       " (0, 6),\n",
-       " (0, 7),\n",
-       " (0, 8),\n",
-       " (1, 0),\n",
-       " (1, 1),\n",
-       " (1, 2),\n",
-       " (1, 3),\n",
-       " (1, 4),\n",
-       " (1, 5),\n",
-       " (1, 6),\n",
-       " (1, 7),\n",
-       " (2, 0),\n",
-       " (2, 1),\n",
-       " (2, 2),\n",
-       " (2, 3),\n",
-       " (2, 4),\n",
-       " (2, 5),\n",
-       " (2, 6),\n",
-       " (3, 0),\n",
-       " (3, 1),\n",
-       " (3, 2),\n",
-       " (3, 3),\n",
-       " (3, 4),\n",
-       " (3, 5),\n",
-       " (4, 0),\n",
-       " (4, 1),\n",
-       " (4, 2),\n",
-       " (4, 3),\n",
-       " (4, 4),\n",
-       " (5, 0),\n",
-       " (5, 1),\n",
-       " (5, 2),\n",
-       " (5, 3),\n",
-       " (6, 0),\n",
-       " (6, 1),\n",
-       " (6, 2),\n",
-       " (7, 0),\n",
-       " (7, 1),\n",
-       " (8, 0)]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "size = 9\n",
@@ -74,19 +19,27 @@
     "              [9, 7, 8, 5, 3, 1, 6, 4, 2]])\n",
     "\n",
     "def gen_upper_left_x(size=9):\n",
-    "    offset = 0\n",
     "    out = list()\n",
     "    for i in range(0, size):\n",
-    "        out += [i]*(size-offset)\n",
-    "        offset += 1\n",
+    "        out += [i]*(size-i)\n",
     "    return np.array(out)\n",
     "\n",
     "def gen_upper_left_y(size=9):\n",
-    "    offset = 0\n",
     "    out = list()\n",
     "    for i in range(0, size):\n",
-    "        out += list(np.arange(0, size-offset))\n",
-    "        offset += 1\n",
+    "        out += list(np.arange(0, size-i))\n",
+    "    return np.array(out)\n",
+    "\n",
+    "def gen_lower_right_x(size=9):\n",
+    "    out = list()\n",
+    "    for i in range(0, size):\n",
+    "        out += list(np.arange(i, size))\n",
+    "    return np.array(out)\n",
+    "\n",
+    "def gen_lower_right_y(size=9):\n",
+    "    out = list()\n",
+    "    for i in range(0, size):\n",
+    "        out += [size-i-1]*(size-i)\n",
     "    return np.array(out)\n",
     "\n",
     "def gen_ul_indices(size=9):\n",
@@ -96,32 +49,32 @@
     "    return [(x, y) for x, y in zip(np.tril_indices(size)[0], np.tril_indices(size)[1])]\n",
     "\n",
     "def gen_ur_indices(size=9):\n",
-    "    return [(x, y) for x, y in zip(np.triu_indices(size)[0], np.triu_indices(size)[1])]"
+    "    return [(x, y) for x, y in zip(np.triu_indices(size)[0], np.triu_indices(size)[1])]\n",
+    "\n",
+    "def gen_lr_indices(size=9):\n",
+    "    return [(x, y) for x, y in zip(gen_lower_right_x(size), gen_lower_right_y(size))]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0, 1, 1, 2, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 6,\n",
-       "        6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 8, 8, 8,\n",
-       "        8]),\n",
-       " array([0, 0, 1, 0, 1, 2, 0, 1, 2, 3, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 5, 0,\n",
-       "        1, 2, 3, 4, 5, 6, 0, 1, 2, 3, 4, 5, 6, 7, 0, 1, 2, 3, 4, 5, 6, 7,\n",
-       "        8]))"
+       "array([9, 3, 6, 7, 4, 5, 8, 1, 2, 2, 5, 9, 1, 6, 7, 3, 4, 4, 8, 2, 3, 9,\n",
+       "       5, 6, 5, 7, 4, 2, 8, 1, 9, 1, 4, 7, 3, 2, 6, 9, 5, 1, 2, 8, 4, 7,\n",
+       "       9])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.triu_indices(9)"
+    "x[(gen_lower_right_x(size), gen_lower_right_y(size))]"
    ]
   }
  ],
