--- a/tests/test_values.ipynb
+++ b/tests/test_values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,24 +57,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([9, 3, 6, 7, 4, 5, 8, 1, 2, 2, 5, 9, 1, 6, 7, 3, 4, 4, 8, 2, 3, 9,\n",
-       "       5, 6, 5, 7, 4, 2, 8, 1, 9, 1, 4, 7, 3, 2, 6, 9, 5, 1, 2, 8, 4, 7,\n",
-       "       9])"
+       "[((0, 0), [(1, 0)]),\n",
+       " ((1, 0), [(0, 0), (2, 0)]),\n",
+       " ((1, 1), [(2, 1)]),\n",
+       " ((2, 0), [(1, 0), (3, 0)]),\n",
+       " ((2, 1), [(1, 1), (3, 1)]),\n",
+       " ((2, 2), [(3, 2)]),\n",
+       " ((3, 0), [(2, 0), (4, 0)]),\n",
+       " ((3, 1), [(2, 1), (4, 1)]),\n",
+       " ((3, 2), [(2, 2), (4, 2)]),\n",
+       " ((3, 3), [(4, 3)]),\n",
+       " ((4, 0), [(3, 0), (5, 0)]),\n",
+       " ((4, 1), [(3, 1), (5, 1)]),\n",
+       " ((4, 2), [(3, 2), (5, 2)]),\n",
+       " ((4, 3), [(3, 3), (5, 3)]),\n",
+       " ((4, 4), [(5, 4)]),\n",
+       " ((5, 0), [(4, 0), (6, 0)]),\n",
+       " ((5, 1), [(4, 1), (6, 1)]),\n",
+       " ((5, 2), [(4, 2), (6, 2)]),\n",
+       " ((5, 3), [(4, 3), (6, 3)]),\n",
+       " ((5, 4), [(4, 4), (6, 4)]),\n",
+       " ((5, 5), [(6, 5)]),\n",
+       " ((6, 0), [(5, 0), (7, 0)]),\n",
+       " ((6, 1), [(5, 1), (7, 1)]),\n",
+       " ((6, 2), [(5, 2), (7, 2)]),\n",
+       " ((6, 3), [(5, 3), (7, 3)]),\n",
+       " ((6, 4), [(5, 4), (7, 4)]),\n",
+       " ((6, 5), [(5, 5), (7, 5)]),\n",
+       " ((6, 6), [(7, 6)]),\n",
+       " ((7, 0), [(6, 0), (8, 0)]),\n",
+       " ((7, 1), [(6, 1), (8, 1)]),\n",
+       " ((7, 2), [(6, 2), (8, 2)]),\n",
+       " ((7, 3), [(6, 3), (8, 3)]),\n",
+       " ((7, 4), [(6, 4), (8, 4)]),\n",
+       " ((7, 5), [(6, 5), (8, 5)]),\n",
+       " ((7, 6), [(6, 6), (8, 6)]),\n",
+       " ((7, 7), [(8, 7)]),\n",
+       " ((8, 0), [(7, 0)]),\n",
+       " ((8, 1), [(7, 1)]),\n",
+       " ((8, 2), [(7, 2)]),\n",
+       " ((8, 3), [(7, 3)]),\n",
+       " ((8, 4), [(7, 4)]),\n",
+       " ((8, 5), [(7, 5)]),\n",
+       " ((8, 6), [(7, 6)]),\n",
+       " ((8, 7), [(7, 7)]),\n",
+       " ((8, 8), [])]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x[(gen_lower_right_x(size), gen_lower_right_y(size))]"
+    "ll = gen_ll_indices(9)\n",
+    "adjacent = list()\n",
+    "for idx in range(0, len(ll)):\n",
+    "    i = ll[idx]\n",
+    "    idx_list = ll[:idx] + ll[idx + 1:]\n",
+    "    adjacent.append((i, [j for j in idx_list if (abs(j[0] - i[0]) == 1 and j[1] - i[1] == 0) or (abs(j[1] - i[1]) == 0 and j[0] - i[0] == 0)]))\n",
+    "adjacent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "\n",
+    "len(list(combinations(gen_ll_indices(9), 9)))"
    ]
   }
  ],
