--- a/tests/test_values.ipynb
+++ b/tests/test_values.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from random import choice \n",
+    "\n",
     "size = 9\n",
     "x = np.array([[1, 2, 3, 4, 5, 6, 7, 8, 9], \n",
     "              [4, 5, 6, 7, 8, 9, 1, 2, 3], \n",
@@ -57,84 +59,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((0, 0), [(1, 0)]),\n",
-       " ((1, 0), [(0, 0), (2, 0)]),\n",
-       " ((1, 1), [(2, 1)]),\n",
-       " ((2, 0), [(1, 0), (3, 0)]),\n",
-       " ((2, 1), [(1, 1), (3, 1)]),\n",
-       " ((2, 2), [(3, 2)]),\n",
-       " ((3, 0), [(2, 0), (4, 0)]),\n",
-       " ((3, 1), [(2, 1), (4, 1)]),\n",
-       " ((3, 2), [(2, 2), (4, 2)]),\n",
-       " ((3, 3), [(4, 3)]),\n",
-       " ((4, 0), [(3, 0), (5, 0)]),\n",
-       " ((4, 1), [(3, 1), (5, 1)]),\n",
-       " ((4, 2), [(3, 2), (5, 2)]),\n",
-       " ((4, 3), [(3, 3), (5, 3)]),\n",
-       " ((4, 4), [(5, 4)]),\n",
-       " ((5, 0), [(4, 0), (6, 0)]),\n",
-       " ((5, 1), [(4, 1), (6, 1)]),\n",
-       " ((5, 2), [(4, 2), (6, 2)]),\n",
-       " ((5, 3), [(4, 3), (6, 3)]),\n",
-       " ((5, 4), [(4, 4), (6, 4)]),\n",
-       " ((5, 5), [(6, 5)]),\n",
-       " ((6, 0), [(5, 0), (7, 0)]),\n",
-       " ((6, 1), [(5, 1), (7, 1)]),\n",
-       " ((6, 2), [(5, 2), (7, 2)]),\n",
-       " ((6, 3), [(5, 3), (7, 3)]),\n",
-       " ((6, 4), [(5, 4), (7, 4)]),\n",
-       " ((6, 5), [(5, 5), (7, 5)]),\n",
-       " ((6, 6), [(7, 6)]),\n",
-       " ((7, 0), [(6, 0), (8, 0)]),\n",
-       " ((7, 1), [(6, 1), (8, 1)]),\n",
-       " ((7, 2), [(6, 2), (8, 2)]),\n",
-       " ((7, 3), [(6, 3), (8, 3)]),\n",
-       " ((7, 4), [(6, 4), (8, 4)]),\n",
-       " ((7, 5), [(6, 5), (8, 5)]),\n",
-       " ((7, 6), [(6, 6), (8, 6)]),\n",
-       " ((7, 7), [(8, 7)]),\n",
-       " ((8, 0), [(7, 0)]),\n",
-       " ((8, 1), [(7, 1)]),\n",
-       " ((8, 2), [(7, 2)]),\n",
-       " ((8, 3), [(7, 3)]),\n",
-       " ((8, 4), [(7, 4)]),\n",
-       " ((8, 5), [(7, 5)]),\n",
-       " ((8, 6), [(7, 6)]),\n",
-       " ((8, 7), [(7, 7)]),\n",
-       " ((8, 8), [])]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ll = gen_ll_indices(9)\n",
-    "adjacent = list()\n",
-    "for idx in range(0, len(ll)):\n",
-    "    i = ll[idx]\n",
-    "    idx_list = ll[:idx] + ll[idx + 1:]\n",
-    "    adjacent.append((i, [j for j in idx_list if (abs(j[0] - i[0]) == 1 and j[1] - i[1] == 0) or (abs(j[1] - i[1]) == 0 and j[0] - i[0] == 0)]))\n",
-    "adjacent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import combinations\n",
+    "def random_corner(size):\n",
+    "    return choice([(0, 0), (0, size-1), (size-1, 0), (size-1, size-1)])\n",
     "\n",
+    "def get_adjacent(tri_ind):\n",
+    "    adjacent = dict()\n",
+    "    for idx in range(0, len(tri_ind)):\n",
+    "        i = tri_ind[idx]\n",
+    "        idx_list = tri_ind[:idx] + tri_ind[idx + 1:]\n",
+    "        adjacent.update({i: [j for j in idx_list if (abs(j[0] - i[0]) == 1 and j[1] - i[1] == 0) or (abs(j[1] - i[1]) == 1 and j[0] - i[0] == 0)]})\n",
+    "    return adjacent\n",
     "\n",
-    "len(list(combinations(gen_ll_indices(9), 9)))"
+    "def gen_random_region(x, size):\n",
+    "    # start w/ random corner\n",
+    "    corner = random_corner(size)\n",
+    "    # pick a random direction to start, generate available indices and their adjacent indices\n",
+    "    if corner == (0, 0):\n",
+    "        x_start = (1, 0)\n",
+    "        y_start = (0, 1)\n",
+    "        tri_ind = get_adjacent(gen_ul_indices(size))\n",
+    "    elif corner == (0, size-1):\n",
+    "        x_start = (1, size-1)\n",
+    "        y_start = (0, size-2)\n",
+    "        tri_ind = get_adjacent(gen_ur_indices(size))\n",
+    "    elif corner == (size-1, 0):\n",
+    "        x_start = (size-2, 0)\n",
+    "        y_start = (size-1, 1)\n",
+    "        tri_ind = get_adjacent(gen_ll_indices(size))\n",
+    "    else:\n",
+    "        x_start = (size-2, size-1)\n",
+    "        y_start = (size-1, size-2)\n",
+    "        tri_ind = get_adjacent(gen_lr_indices(size))\n",
+    "    # start out with no exclusions\n",
+    "    exclude = list()\n",
+    "    # random starting checks\n",
+    "    start_choices = [x_start, y_start]\n",
+    "    start = choice(start_choices)\n",
+    "    start_choices = [choice for choice in start_choices if choice != start]\n",
+    "    # start != corner, so move on \n",
+    "    # start building region (of indices, and of values)\n",
+    "    region_i = [corner, start]\n",
+    "    region_v = [x[corner], x[start]]\n",
+    "    while len(region_v) < size:\n",
+    "        next = 2\n",
+    "        # get adjacent\n",
+    "        next_ind = [i for i in tri_ind[region_i[next - 1]] if i not in region_i and i not in exclude and x[i] not in region_v]\n",
+    "        if len(next_ind) == 0:\n",
+    "            if len(region_i) > 2:\n",
+    "                exclude.append(region_i.pop())\n",
+    "                region_v.pop()\n",
+    "                next += -1\n",
+    "            elif len(region_i) == 2 and len(start_choices) == 1:\n",
+    "                start = start_choices[0]\n",
+    "                region_i = [corner, start]\n",
+    "                region_v = [x[corner], x[start]]\n",
+    "            else:\n",
+    "                raise Exception('There are no possible solutions given this arrangement')\n",
+    "        else:\n",
+    "            next += 1\n",
+    "            next_ind = choice(next_ind)\n",
+    "            region_i.append(next_ind)\n",
+    "            region_v.append(x[next_ind])\n",
+    "        \n",
+    "    \n",
+    "\n",
+    "gen_random_region(x, size)"
    ]
   }
  ],
