--- a/tests/test_vals.ipynb
+++ b/tests/test_vals.ipynb
@@ -54,15 +54,9 @@
     "    return [(x, y) for x, y in zip(np.triu_indices(size)[0], np.triu_indices(size)[1])]\n",
     "\n",
     "def gen_lr_indices(size=9):\n",
-    "    return [(x, y) for x, y in zip(gen_lower_right_x(size), gen_lower_right_y(size))]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return [(x, y) for x, y in zip(gen_lower_right_x(size), gen_lower_right_y(size))]\n",
+    "\n",
+    "\n",
     "def random_corner(size):\n",
     "    return choice([(0, 0), (0, size-1), (size-1, 0), (size-1, size-1)])\n",
     "\n",
@@ -117,6 +111,7 @@
     "                start = start_choices[0]\n",
     "                region_i = [corner, start]\n",
     "                region_v = [x[corner], x[start]]\n",
+    "                print(region_i, region_v)\n",
     "            else:\n",
     "                raise Exception('There are no possible solutions given this arrangement')\n",
     "        else:\n",
@@ -126,7 +121,7 @@
     "            region_v.append(x[next_ind])\n",
     "        \n",
     "    \n",
-    "\n",
+    "print(x)\n",
     "gen_random_region(x, size)"
    ]
   }
@@ -138,15 +133,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.10.5"
   },
   "orig_nbformat": 4,
