--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -21,15 +21,52 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'PUZZLE_GEN_START_TIME' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\benton.tripp\\Box\\Benton Tripp\\Personal\\irregular-enigma\\tests\\test.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 179>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=176'>177</a>\u001b[0m \u001b[39m# start w/ random corner\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=177'>178</a>\u001b[0m corner \u001b[39m=\u001b[39m random_corner(size)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=178'>179</a>\u001b[0m \u001b[39mif\u001b[39;00m time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m PUZZLE_GEN_START_TIME \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m TIMEOUT:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=179'>180</a>\u001b[0m     region_i \u001b[39m=\u001b[39m gen_random_region(x, size)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=180'>181</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'PUZZLE_GEN_START_TIME' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Starting corner is LR                                                         <a href=\"file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_15652\\3516234292.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3516234292.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_15652\\3516234292.py#123\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">123</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m          \u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Starting corner is LR                                                         \u001b]8;id=777553;file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_15652\\3516234292.py\u001b\\\u001b[2m3516234292.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=885159;file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_15652\\3516234292.py#123\u001b\\\u001b[2m123\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Starting Region Indices: <span style=\"font-weight: bold\">[(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <a href=\"file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_15652\\3516234292.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3516234292.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_15652\\3516234292.py#175\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">175</span></a>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span>         <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span><span style=\"font-weight: bold\">)]</span>                                                           <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                 </span>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span>         Starting Region Values: <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">9</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span><span style=\"font-weight: bold\">]</span>                           <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                 </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m          \u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Starting Region Indices: \u001b[1m[\u001b[0m\u001b[1m(\u001b[0m\u001b[1;36m8\u001b[0m, \u001b[1;36m8\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m8\u001b[0m, \u001b[1;36m7\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m7\u001b[0m, \u001b[1;36m7\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m7\u001b[0m, \u001b[1;36m6\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m7\u001b[0m, \u001b[1;36m5\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m7\u001b[0m, \u001b[1;36m4\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m7\u001b[0m, \u001b]8;id=753943;file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_15652\\3516234292.py\u001b\\\u001b[2m3516234292.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=351872;file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_15652\\3516234292.py#175\u001b\\\u001b[2m175\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m           \u001b[0m         \u001b[1;36m3\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m6\u001b[0m, \u001b[1;36m3\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m6\u001b[0m, \u001b[1;36m2\u001b[0m\u001b[1m)\u001b[0m\u001b[1m]\u001b[0m                                                           \u001b[2m                 \u001b[0m\n",
+       "\u001b[2;36m           \u001b[0m         Starting Region Values: \u001b[1m[\u001b[0m\u001b[1;36m2\u001b[0m, \u001b[1;36m4\u001b[0m, \u001b[1;36m3\u001b[0m, \u001b[1;36m5\u001b[0m, \u001b[1;36m8\u001b[0m, \u001b[1;36m7\u001b[0m, \u001b[1;36m9\u001b[0m, \u001b[1;36m6\u001b[0m, \u001b[1;36m1\u001b[0m\u001b[1m]\u001b[0m                           \u001b[2m                 \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 1, 1, 1, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 1, 1]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -172,15 +209,20 @@
     "    region_i = [corner, start]\n",
     "    region_v = [x[corner], x[start]]\n",
     "    next = 2\n",
+    "    PUZZLE_GEN_START_TIME = time.time()\n",
     "    while next < size:\n",
     "        # get adjacent\n",
     "        next_ind = [i for i in adj[region_i[next - 1]] if i not in region_i and x[i] not in region_v and tuple(region_i + [i]) not in exclude]\n",
     "        if len(next_ind) == 0:\n",
     "            if len(region_i) > 2:\n",
+    "                if time.time() - PUZZLE_GEN_START_TIME >= TIMEOUT:\n",
+    "                    raise TimeoutError\n",
     "                exclude.append(tuple(region_i))\n",
     "                region_i.pop(-1)\n",
     "                region_v.pop(-1)\n",
     "            elif len(region_i) == 2 and len(start_choices) == 1:\n",
+    "                if time.time() - PUZZLE_GEN_START_TIME >= TIMEOUT:\n",
+    "                    raise TimeoutError\n",
     "                logger.info('RESETTING START CHOICE:\\nregion_i: {};\\nregion_v: {};'.format(region_i, region_v))\n",
     "                exclude.append(tuple(region_i))\n",
     "                start = start_choices.pop(0)\n",
@@ -208,10 +250,7 @@
     "print(x)\n",
     "# start w/ random corner\n",
     "corner = random_corner(size)\n",
-    "PUZZLE_GEN_START_TIME = time.time()\n",
-    "if time.time() - PUZZLE_GEN_START_TIME >= TIMEOUT:\n",
-    "    region_i = gen_random_region(x, size)\n",
-    "    raise TimeoutError\n",
+    "region_i = gen_random_region(x, size)\n",
     "\n",
     "for i in region_i:\n",
     "    x[i] = -1\n",
